# amlogic-npu-transformers

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: gemma3_270m_block.yaml
docs/: implementation.md  publishing.md  vim3_runbook.md
runtime/: CMakeLists.txt
runtime/adapters/: acuity_shim_template.cpp  reference_copy_adapter.cpp
runtime/include/amlogic_transformers/: adapter_abi.h
runtime/include/gemma_npu/: adapter_abi.h
runtime/src/: block_runner.cpp  block_runner.h  main.cpp
scripts/: convert_acuity.py  export_gemma_block.py  make_runtime_fixture.py
src/amlogic_transformers/: config.py  convert_acuity.py  export_block.py  manifest.py  server.py
src/gemma_npu/: __init__.py  config.py  convert_acuity.py  export_block.py  server.py
tests/: test_config_manifest.py
