[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amlogic-npu-transformers"
version = "0.1.0"
description = "Amlogic NPU inference pipeline for Gemma 3 270M on Khadas VIM3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
export = [
  "numpy>=1.24",
  "onnx>=1.16",
  "torch>=2.3",
  "transformers>=4.51",
]
serve = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.scripts]
amlogic-transformers-export-block = "amlogic_transformers.export_block:main"
amlogic-transformers-convert-acuity = "amlogic_transformers.convert_acuity:main"
amlogic-transformers-server = "amlogic_transformers.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
